src/objects/ZPAPER__zStack__c.object
<CustomObject>
    <description>Force.com binding record for zPaper content
from, pages and normal workflow fields
picklist for doctype(program classification) and channel (fax,email,data,scan,file,SMS)
parent stack lookup
TODO: received, split who/when, attached who/when, data entry who/when</description>
    <fields>
        <fullName>ZPAPER__Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>zStacks</relationshipLabel>
        <relationshipName>zStacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Channel__c</fullName>
        <defaultValue>&quot;fax&quot;</defaultValue>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>data</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>fax</fullName>
                    <default>true</default>
                    <label>fax</label>
                </value>
                <value>
                    <fullName>file</fullName>
                </value>
                <value>
                    <fullName>scan</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                    <default>true</default>
                    <label>Intake</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>zCharta</fullName>
                </value>
                <value>
                    <fullName>zPapyrus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__NPI__c</fullName>
        <label>NPI</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Pages__c</fullName>
        <label>Pages</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Splits or other operations create linkages.</description>
        <label>zStack</label>
        <referenceTo>ZPAPER__zStack__c</referenceTo>
        <relationshipLabel>zStacks</relationshipLabel>
        <relationshipName>zStacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>zStacks</relationshipLabel>
        <relationshipName>zStacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
                <value>
                    <fullName>After Hours</fullName>
                </value>
                <value>
                    <fullName>Slow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__Program_Name__c</fullName>
        <label>Program Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>zStacks</relationshipLabel>
        <relationshipName>zStacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Stage__c</fullName>
        <description>Lifecycle of a document from its beginning to end within a flow.</description>
        <inlineHelpText>Not all documents go through all stages.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ZPAPER__faxType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discovered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Indexed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__Status__c</fullName>
        <label>Incoming Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__Triage_View__c</fullName>
        <formula>HYPERLINK(&quot;https://&quot;+$Setup.ZPAPER__zpaper__c.ZPAPER__server__c + &quot;/kb/jsp/console.jsp?dbID=&quot;+ ZPAPER__receivedId__c &amp; &quot;&amp;SFserver=&quot; &amp; $Api.Partner_Server_URL_310 &amp; &quot;&amp;SFsession=&quot; &amp; $Api.Session_ID, &quot;Triage&quot;,&quot;zStackTriage&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Triage View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__View__c</fullName>
        <formula>HYPERLINK(&quot;https://&quot;+$Setup.ZPAPER__zpaper__c.ZPAPER__server__c + &quot;/kb/jsp/SF_find.jsp?go=SF_files.jsp&amp;dbID=&quot;+ ZPAPER__receivedId__c &amp; &quot;&amp;SFserver=&quot; &amp; $Api.Partner_Server_URL_310 &amp; &quot;&amp;SFsession=&quot; &amp; $Api.Session_ID, &quot;View&quot;,&quot;zStack&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ZPAPER__Classification__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ENRL:Enrollment</fullName>
                    <default>true</default>
                    <label>ENRL:Enrollment</label>
                </value>
                <value>
                    <fullName>MIF:Missing Info</fullName>
                </value>
                <value>
                    <fullName>PAF:Patient Authorization</fullName>
                </value>
                <value>
                    <fullName>POI:Proof of Insurance</fullName>
                </value>
                <value>
                    <fullName>FIN:Financial Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__fromPages__c</fullName>
        <description>describes split and rotation</description>
        <label>From Pages</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__latestFax__c</fullName>
        <label>Received At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__outboundFaxTemplate__c</fullName>
        <label>Outbound Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__producedId__c</fullName>
        <description>zPaper ID for most recent activity</description>
        <label>Produced ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__receivedId__c</fullName>
        <description>zPaper database ID</description>
        <label>Received ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sendFaxStatus__c</fullName>
        <description>(deprecated)</description>
        <label>Status (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxAt__c</fullName>
        <label>Sent At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxStatus__c</fullName>
        <label>Sent Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxTo__c</fullName>
        <label>Sent To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__triageURL__c</fullName>
        <description>Using the whole SSO data causes the SessionID to be split up and not work. Home component must be used to create an existing zPaper session. 

&quot;https://&quot;+$Setup.ZPAPER__zpaper__c.ZPAPER__server__c + &quot;/kb/jsp/console.jsp?dbID=&quot;+ ZPAPER__receivedId__c +&quot;&amp;SFserver=&quot;+ left($Api.Partner_Server_URL_310,find(&quot;/&quot;,$Api.Partner_Server_URL_310,10))+&quot;&amp;SFsession=&quot;+ $Api.Session_ID</description>
        <formula>HYPERLINK(&quot;https://&quot;+$Setup.ZPAPER__zpaper__c.ZPAPER__server__c + &quot;/kb/jsp/console.jsp?dbID=&quot;+ ZPAPER__receivedId__c &amp; &quot;&amp;SFserver=&quot; &amp; $Api.Partner_Server_URL_310 &amp; &quot;&amp;SFsession=&quot; &amp; $Api.Session_ID, &quot;Triage&quot;,&quot;Stack&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Triage</label>
        <type>Text</type>
    </fields>
    <label>zStack</label>
    <listViews>
        <fullName>ZPAPER__All</fullName>
        <columns>ZPAPER__triageURL__c</columns>
        <columns>ZPAPER__Status__c</columns>
        <columns>ZPAPER__Priority__c</columns>
        <columns>ZPAPER__Channel__c</columns>
        <columns>ZPAPER__Pages__c</columns>
        <columns>ZPAPER__faxType__c</columns>
        <columns>ZPAPER__From__c</columns>
        <columns>ZPAPER__Provider__c</columns>
        <columns>ZPAPER__Patient__c</columns>
        <columns>ZPAPER__Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ZPAPER__latestFax__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ZPAPER__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>All Not Completed</label>
    </listViews>
    <listViews>
        <fullName>ZPAPER__All_Completed</fullName>
        <columns>ZPAPER__triageURL__c</columns>
        <columns>ZPAPER__Status__c</columns>
        <columns>ZPAPER__Priority__c</columns>
        <columns>ZPAPER__Channel__c</columns>
        <columns>ZPAPER__Pages__c</columns>
        <columns>ZPAPER__faxType__c</columns>
        <columns>ZPAPER__From__c</columns>
        <columns>ZPAPER__Provider__c</columns>
        <columns>ZPAPER__Patient__c</columns>
        <columns>ZPAPER__Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ZPAPER__latestFax__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ZPAPER__Status__c</field>
            <operation>contains</operation>
            <value>Complete</value>
        </filters>
        <label>All Completed</label>
    </listViews>
    <listViews>
        <fullName>ZPAPER__Intake_for_Triage</fullName>
        <columns>ZPAPER__triageURL__c</columns>
        <columns>ZPAPER__Status__c</columns>
        <columns>ZPAPER__Priority__c</columns>
        <columns>ZPAPER__Channel__c</columns>
        <columns>ZPAPER__Pages__c</columns>
        <columns>ZPAPER__faxType__c</columns>
        <columns>ZPAPER__From__c</columns>
        <columns>ZPAPER__Provider__c</columns>
        <columns>ZPAPER__Patient__c</columns>
        <columns>ZPAPER__Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ZPAPER__latestFax__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ZPAPER__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Intake for Triage</label>
    </listViews>
    <listViews>
        <fullName>ZPAPER__zIntake</fullName>
        <columns>NAME</columns>
        <columns>ZPAPER__sendFaxStatus__c</columns>
        <columns>ZPAPER__Channel__c</columns>
        <columns>ZPAPER__Pages__c</columns>
        <columns>ZPAPER__faxType__c</columns>
        <columns>ZPAPER__Patient__c</columns>
        <columns>ZPAPER__Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ZPAPER__Priority__c</columns>
        <columns>ZPAPER__latestFax__c</columns>
        <columns>ZPAPER__From__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ZPAPER__sendFaxStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Intake</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>zStack Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zStacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>